# NIKHIL-S-CAREERS-WEBSITE

./: .breakpoints  .replit  LICENSE  README.md  app.py  pyproject.toml  shell.nix
templates/: added html and css  footer.html  home.html  jobitem.html  nav.html
